# openlongpdf-translator

./: .gitignore  AUTH_AND_AUTOMATION_PLAN.md  CLI_GOAL_PROMPT.md  LICENSE  PROJECT_BRIEF.md  README.md  README_SEED.md  pyproject.toml
extension/: README.md  assist-core.js  content.js  manifest.json
src/openlongpdf/: __init__.py  api_translate.py  chunking.py  cli.py  clipboard.py  gui.py  pdf_extract.py  project.py  prompts.py  render.py  sizing.py
tests/: test_api_translate.py  test_cli.py  test_clipboard.py  test_gui.py  test_workflow.py
