[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openlongpdf-translator"
version = "0.1.0"
description = "Local-first CLI workflow for turning long PDFs into page-aware translation notes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "OpenLongPDF contributors" }]
dependencies = ["pypdf>=4,<6"]
keywords = ["pdf", "translation", "cli", "markdown", "wsl", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
openlongpdf = "openlongpdf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
